apps/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-fe
spec:
  selector:
    matchLabels:
      app: ecommerce-fe
  template:
    metadata:
      labels:
        app: ecommerce-fe
    spec:
      containers:
        - name: ecommerce-fe
          image: kristijan92/ecommerce-shop-fe
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
