apps/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-fe-service
spec:
  selector:
    app: ecommerce-fe
  ports:
    - port: 80
      targetPort: 3000
